fix(auth): refactor password reset email template loading